# Rental_prices_prediction

./: .gitignore  Dockerfile  README.md  data_analisys_for_app.ipynb  main.py  pyproject.toml
dash_app/: app.py
data/: barrios-fuengirola.geojson  datos_con_distritos.csv  distritos_malaga.geojson  fuengirola_barrios.geojson  idealista-data-2025-05-07.json  idealista-data-2025-05-07_20-01-24.json  idealista-data-2025-05-07_20-01-25.json  idealista-data-2025-05-07_20-01-26.json  idealista-data-2025-05-07_20-01-27.json  idealista-data-2025-05-07_20-01-28.json  idealista-data-2025-05-07_20-01-29.json  idealista-data-2025-05-07_20-01-30.json  idealista-data-2025-05-07_20-01-31.json  idealista-data-2025-05-07_20-01-37.json  idealista-data-2025-05-07_20-01-38.json  idealista-data-2025-05-07_20-01-39.json  idealista-data-2025-05-07_20-01-40.json  idealista-data-2025-05-07_20-01-41.json  idealista-data-2025-05-07_20-01-42.json  idealista-data-2025-05-07_20-01-43.json  idealista-data-2025-05-07_20-01-48.json  idealista-data-2025-05-07_20-01-49.json  idealista-data-2025-05-07_20-01-50.json  idealista-data-2025-05-07_20-01-51.json  idealista-data-2025-05-07_20-01-53.json  idealista-data-2025-05-07_20-01-54.json  idealista-data-2025-05-07_20-01-55.json  idealista-data-2025-05-07_20-01-56.json  idealista-data-2025-05-07_20-01-59.json  idealista-data-2025-05-07_20-02-00.json  idealista-data-2025-05-07_20-02-01.json  idealista-data-2025-05-07_20-02-02.json  idealista-data-2025-05-07_20-02-03.json  idealista-data-2025-05-07_20-02-04.json  idealista-data-2025-05-07_20-02-06.json  (+18 more)
(+79 files in other folders)
