[project]
name = "rental-prices-predicction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.4",
    "dash-iconify>=0.1.2",
    "dash-leaflet>=1.1.3",
    "dash-mantine-components>=2.1.0",
    "dotenv>=0.9.9",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0,<3.1.0 ",
]
